--- a/src/onegov/form/locale/de_ch/LC_MESSAGES/onegov.form.po
+++ b/src/onegov/form/locale/de_ch/LC_MESSAGES/onegov.form.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2023-08-17 11:48+0200\n"
+"POT-Creation-Date: 2024-07-02 14:42+0200\n"
 "PO-Revision-Date: 2022-03-07 13:56+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: German\n"
@@ -55,6 +55,9 @@ msgstr "E-Mail"
 
 msgid "Website"
 msgstr "Webseite"
+
+msgid "Video Link"
+msgstr "Video Link"
 
 msgid "Comment"
 msgstr "Kommentar"
@@ -141,7 +144,9 @@ msgstr "Der Syntax in der {line}. Zeile ist ungültig."
 msgid ""
 "The indentation on line {line} is not valid. Please use a multiple of 4 "
 "spaces"
-msgstr "Die Einrückung in Zeile {line} ist nicht gültig. Bitte verwenden Sie ein Vielfaches von 4 Leerzeichen"
+msgstr ""
+"Die Einrückung in Zeile {line} ist nicht gültig. Bitte verwenden Sie ein "
+"Vielfaches von 4 Leerzeichen"
 
 #, python-format
 msgid "The field '{label}' exists more than once."
@@ -177,6 +182,14 @@ msgid ""
 msgstr ""
 "Ungültiger Feldtyp für Feld '{label}'. Für Filter sind nur 'Auswahl' oder "
 "'Mehrfach-Auswahl' Felder erlaubt."
+
+#, python-format
+msgid ""
+"Invalid field type for field '{label}'. Please use the plus-icon to add "
+"allowed field types."
+msgstr ""
+"Ungültiger Feldtyp für Feld '{label}'. Bitte verwenden Sie das Plus-Symbol "
+"um erlaubte Feldtypen hinzuzufügen."
 
 msgid "Not a valid phone number."
 msgstr "Ungültige Telefonnummer."
