--- a/src/onegov/form/locale/fr_CH/LC_MESSAGES/onegov.form.po
+++ b/src/onegov/form/locale/fr_CH/LC_MESSAGES/onegov.form.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2023-08-17 11:48+0200\n"
+"POT-Creation-Date: 2024-07-02 14:42+0200\n"
 "PO-Revision-Date: 2019-01-31 08:31+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: French\n"
@@ -54,6 +54,9 @@ msgstr "E-mail"
 
 msgid "Website"
 msgstr "Site internet"
+
+msgid "Video Link"
+msgstr ""
 
 msgid "Comment"
 msgstr "Commentaire"
@@ -140,10 +143,9 @@ msgstr "La syntaxe de la ligne {line} est invalide"
 msgid ""
 "The indentation on line {line} is not valid. Please use a multiple of 4 "
 "spaces"
-msgstr "L'indentation de la ligne {ligne} n'est pas valide. Veuillez utiliser un multiple de 4 "
-"espaces"
-
-
+msgstr ""
+"L'indentation de la ligne {ligne} n'est pas valide. Veuillez utiliser un "
+"multiple de 4 espaces"
 
 #, python-format
 msgid "The field '{label}' exists more than once."
@@ -179,6 +181,12 @@ msgid ""
 msgstr ""
 "Type de champ non valide pour le champ '{label}'. Pour les filtres seuls les "
 "champs 'sélection' ou 'sélection multiple' sont autorisés."
+
+#, python-format
+msgid ""
+"Invalid field type for field '{label}'. Please use the plus-icon to add "
+"allowed field types."
+msgstr ""
 
 msgid "Not a valid phone number."
 msgstr "N'est pas un numéro de téléphone valide."
