--- a/src/onegov/form/locale/it_CH/LC_MESSAGES/onegov.form.po
+++ b/src/onegov/form/locale/it_CH/LC_MESSAGES/onegov.form.po
@@ -4,7 +4,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2023-08-17 11:48+0200\n"
+"POT-Creation-Date: 2024-07-02 14:42+0200\n"
 "PO-Revision-Date: 2022-03-07 13:55+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: Italian\n"
@@ -52,6 +52,9 @@ msgstr "E-Mail"
 
 msgid "Website"
 msgstr "Sito web"
+
+msgid "Video Link"
+msgstr ""
 
 msgid "Comment"
 msgstr "Commento"
@@ -138,7 +141,9 @@ msgstr "La sintassi sulla linea {line} non è valida."
 msgid ""
 "The indentation on line {line} is not valid. Please use a multiple of 4 "
 "spaces"
-msgstr "L'indentazione della riga {linea} non è valida. Si prega di utilizzare un multiplo di 4 spazi"
+msgstr ""
+"L'indentazione della riga {linea} non è valida. Si prega di utilizzare un "
+"multiplo di 4 spazi"
 
 #, python-format
 msgid "The field '{label}' exists more than once."
@@ -174,6 +179,12 @@ msgid ""
 msgstr ""
 "Tipo di campo non valido per il campo '{label}'. Per i filtri solo i campi "
 "'selezionare' o 'selezionare più volte' sono consentiti."
+
+#, python-format
+msgid ""
+"Invalid field type for field '{label}'. Please use the plus-icon to add "
+"allowed field types."
+msgstr ""
 
 msgid "Not a valid phone number."
 msgstr "Non è un numero di telefono valido."
