--- a/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
@@ -4129,6 +4129,9 @@ msgstr "Riferimento della richiesta"
 msgid "No people added yet."
 msgstr "Nessuna persona aggiunta ancora."
 
+msgid "No people found for current filter selection."
+msgstr "Non sono state trovate persone per la selezione del filtro corrente."
+
 msgid "Export a vCard of this person"
 msgstr "Esporta una vCard di questa persona"
 
