--- a/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2024-07-03 09:56+0200\n"
+"POT-Creation-Date: 2024-07-03 13:25+0200\n"
 "PO-Revision-Date: 2022-03-15 10:52+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -1870,21 +1870,6 @@ msgstr "Includi il logo nella newsletter"
 msgid "Allow secret content in newsletter"
 msgstr "Consentire contenuti segreti nella newsletter"
 
-msgid "You selected 'secret' content for your newsletter. Secret content will not be visible unless you enable it in"
-msgstr "Avete selezionato un contenuto 'segreto' per la vostra newsletter. I contenuti segreti non saranno visibili a meno che non vengano abilitati nelle"
-
-msgid "newsletter settings"
-msgstr "impostazioni della newsletter"
-
-msgid "You selected 'private' content for your newsletter. Private content cannot be part of a newsletter."
-msgstr "Avete selezionato un contenuto 'privato' per la vostra newsletter. I contenuti privati non possono far parte di una newsletter."
-
-msgid "Warning secret content"
-msgstr "Avviso contenuto segreto"
-
-msgid "Warning private content"
-msgstr "Avviso contenuto privato"
-
 msgid "Old domain"
 msgstr "Vecchio dominio"
 
@@ -3567,6 +3552,9 @@ msgstr "Copia negli appunti"
 msgid "No submissions yet."
 msgstr "Ancora nessuna iscrizione."
 
+msgid "Number of participants"
+msgstr "Numero di partecipanti"
+
 msgid "Hello!"
 msgstr "Ciao!"
 
@@ -4041,6 +4029,29 @@ msgstr "Biglietto archiviato."
 
 msgid "Ticket recovered from archive."
 msgstr "Biglietto recuperato dall'archivio."
+
+msgid "Warning secret content"
+msgstr "Avviso contenuto segreto"
+
+msgid ""
+"You selected 'secret' content for your newsletter. Secret content will not "
+"be visible unless you enable it in"
+msgstr ""
+"Avete selezionato un contenuto 'segreto' per la vostra newsletter. I "
+"contenuti segreti non saranno visibili a meno che non vengano abilitati nelle"
+
+msgid "newsletter settings"
+msgstr "impostazioni della newsletter"
+
+msgid "Warning private content"
+msgstr "Avviso contenuto privato"
+
+msgid ""
+"You selected 'private' content for your newsletter. Private content cannot "
+"be part of a newsletter."
+msgstr ""
+"Avete selezionato un contenuto 'privato' per la vostra newsletter. I "
+"contenuti privati non possono far parte di una newsletter."
 
 msgid ""
 "The newsletter is disabled. You can only see this page because you are "
