Election Day: Fix search hint rendering.
TYPE: Bugfix

--- a/src/onegov/election_day/locale/de_CH/LC_MESSAGES/onegov.election_day.po
+++ b/src/onegov/election_day/locale/de_CH/LC_MESSAGES/onegov.election_day.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-06-08 12:57+0200\n"
+"POT-Creation-Date: 2024-07-08 09:34+0200\n"
 "PO-Revision-Date: 2022-03-24 15:35+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: German\n"
@@ -232,11 +232,11 @@ msgid "Term"
 msgstr "Suchbegriff"
 
 msgid ""
-"Searches the title of the election/vote. Use Wildcards (*) to find more "
-"results, e.g Nationalrat*."
+"Searches the title of the election/vote. Use Wildcards (`*`) to find more "
+"results, e.g `Nationalrat*`."
 msgstr ""
-"Durchsucht den Titel der Wahl/Abstimmung. Benutzen Sie Wildcards (*), um "
-"mehr Resultate zu finden, z.B. Nationalrat*."
+"Durchsucht den Titel der Wahl/Abstimmung. Benutzen Sie Wildcards (`*`), um "
+"mehr Resultate zu finden, z.B. `Nationalrat*`."
 
 msgid "From date"
 msgstr "Von Datum"
