--- a/src/onegov/election_day/locale/it_CH/LC_MESSAGES/onegov.election_day.po
+++ b/src/onegov/election_day/locale/it_CH/LC_MESSAGES/onegov.election_day.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-06-08 12:57+0200\n"
+"POT-Creation-Date: 2024-07-08 09:34+0200\n"
 "PO-Revision-Date: 2022-03-22 08:00+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: \n"
@@ -230,11 +230,11 @@ msgid "Term"
 msgstr "Termine di ricerca"
 
 msgid ""
-"Searches the title of the election/vote. Use Wildcards (*) to find more "
-"results, e.g Nationalrat*."
+"Searches the title of the election/vote. Use Wildcards (`*`) to find more "
+"results, e.g `Nationalrat*`."
 msgstr ""
 "Cerca il titolo dell'elettazione/voto. Usa un carattere jolly (*) per "
-"trovare altri risultati, ad esempio Nationalrat*."
+"trovare altri risultati, ad esempio `Nationalrat*`."
 
 msgid "From date"
 msgstr "Da"
