--- a/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: OneGov Cloud 1.0\n"
-"POT-Creation-Date: 2024-06-27 12:51+0200\n"
+"POT-Creation-Date: 2024-07-09 08:40+0200\n"
 "PO-Revision-Date: 2021-03-03 16:24+0100\n"
 "Last-Translator: Lukas Burkhard <lukas.burkhard@seantis.ch>\n"
 "Language-Team: German\n"
@@ -667,6 +667,12 @@ msgstr "Neuer Eintrag"
 
 msgid "Directory"
 msgstr "Verzeichnis"
+
+msgid "Organisation"
+msgstr "Organisation"
+
+msgid "Sub organisation"
+msgstr "Unterorganisation"
 
 msgid "Functions:"
 msgstr "Funktionen:"
@@ -1475,14 +1481,46 @@ msgstr "Zu Ihrer Suche wurde nichts gefunden."
 msgid "Hashtags"
 msgstr "Hashtags"
 
-msgid "Subscribe to Selection as RSS"
-msgstr "Hashtags abonnieren"
+msgid "Subscribe"
+msgstr "Abonnieren"
+
+msgid "Subscribe to RSS feed"
+msgstr "RSS Feed abonnieren"
+
+msgid "RSS feed with your current selection of tags"
+msgstr "RSS Feed mit Ihrer aktuellen Auswahl an Hashtags"
+
+msgid "Subscribe to newsletter"
+msgstr "Newsletter abonnieren"
+
+msgid "Receive the newsletter by email"
+msgstr "Newsletter per E-Mail erhalten"
 
 msgid "Years"
 msgstr "Jahre"
 
-msgid "Newsletter Subscription"
-msgstr "Anmeldung Newsletter"
+msgid "Warning secret content"
+msgstr "Achtung geheimer Inhalt"
+
+msgid ""
+"You selected 'secret' content for your newsletter. Secret content will not "
+"be visible unless you enable it in"
+msgstr "Sie haben 'geheime' Inhalte für Ihren Newsletter ausgewählt. "
+"Geheime Inhalte werden nicht sichtbar sein, es sei denn, Sie aktivieren sie "
+"in"
+
+msgid "newsletter settings"
+msgstr "Newsletter Einstellungen"
+
+msgid "Warning private content"
+msgstr "Achtung privater Inhalt"
+
+msgid ""
+"You selected 'private' content for your newsletter. Private content cannot "
+"be part of a newsletter."
+msgstr ""
+"Sie haben 'privaten' Inhalt für Ihren Newsletter ausgewählt. Privater Inhalt "
+"kann nicht Teil eines Newsletters sein."
 
 msgid ""
 "The newsletter is disabled. You can only see this page because you are "
@@ -1591,6 +1629,15 @@ msgstr "Noch keine Zahlungen."
 
 msgid "No people added yet."
 msgstr "Es wurden noch keine Personen hinzugefügt."
+
+msgid "No people found for current filter selection."
+msgstr "Keine Personen für aktuelle Filterauswahl gefunden."
+
+msgid "Select organisation"
+msgstr "Organisation wählen"
+
+msgid "Select sub organisation"
+msgstr "Unterorganisation wählen"
 
 msgid "Export a vCard of this person"
 msgstr "Elektronische Visitenkarte (vCard)"
@@ -2090,6 +2137,12 @@ msgstr ""
 msgid "New Note"
 msgstr "Neue Notiz"
 
+#~ msgid "Subscribe to Selection as RSS"
+#~ msgstr "Hashtags abonnieren"
+
+#~ msgid "Newsletter Subscription"
+#~ msgstr "Anmeldung Newsletter"
+
 #~ msgid "Save"
 #~ msgstr "Speichern"
 
@@ -2280,9 +2333,6 @@ msgstr "Neue Notiz"
 
 #~ msgid "Occupancy"
 #~ msgstr "Belegung"
-
-#~ msgid "Subscribe"
-#~ msgstr "Abonnieren"
 
 #~ msgid "Rules"
 #~ msgstr "Regeln"
