Fix missing translation for de_CH

--- a/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
@@ -1917,10 +1917,10 @@ msgstr ""
 "Ermöglicht Website-Besuchern, ihre eigenen Veranstaltungen vorzuschlagen"
 
 msgid "Delete events in the past"
-msgstr ""
+msgstr "Veranstaltungen in der Vergangenheit löschen"
 
 msgid "Events are automatically deleted once they have occurred"
-msgstr ""
+msgstr "Veranstaltungen werden automatisch gelöscht, sobald sie stattgefunden haben"
 
 msgid "Duration from opening a ticket to its automatic archival"
 msgstr ""
