--- a/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
@@ -2592,6 +2592,9 @@ msgstr "En tant qu'image d'en-tête pleine largeur"
 msgid "Documents"
 msgstr "Documenti"
 
+msgid "General event documents"
+msgstr "Documenti generali dell'evento"
+
 msgid "Show file links in sidebar"
 msgstr "Mostra i link ai file nella barra laterale"
 
