--- a/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2024-06-27 12:50+0200\n"
+"POT-Creation-Date: 2024-07-03 13:25+0200\n"
 "PO-Revision-Date: 2022-03-15 10:50+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: French\n"
@@ -120,6 +120,12 @@ msgstr "Vérification du lien"
 
 msgid "Archived Tickets"
 msgstr "Tickets archivés"
+
+msgid "Forms"
+msgstr "Formulaires"
+
+msgid "Surveys"
+msgstr "Enquêtes"
 
 msgid "Management"
 msgstr "Gestion"
@@ -816,6 +822,9 @@ msgstr "Les événements ne sont pas sauvegardés."
 msgid "Expected header line with the following columns:"
 msgstr "La première ligne doit avoir les noms de colonne suivants:"
 
+msgid "Documents"
+msgstr "Documents"
+
 msgid "Map"
 msgstr "Carte"
 
@@ -864,6 +873,9 @@ msgid ""
 msgstr ""
 "Décrit la manière dont cette ressource peut être récupérée. Ce texte est "
 "utilisé sur la page de statut du ticket pour informer le client"
+
+msgid "Short description of the survey"
+msgstr "Description courte de l'enquête"
 
 msgid "URL path"
 msgstr "Chemin Url"
@@ -1855,21 +1867,6 @@ msgstr "Afficher le logo dans la newsletter"
 msgid "Allow secret content in newsletter"
 msgstr "Autoriser le contenu secret dans la newsletter"
 
-msgid "You selected 'secret' content for your newsletter. Secret content will not be visible unless you enable it in"
-msgstr "Vous avez sélectionné un contenu 'secret' pour votre newsletter. Le contenu secret ne sera pas visible à moins que vous ne l'activiez dans les"
-
-msgid "newsletter settings"
-msgstr "paramètres de la newsletter"
-
-msgid "You selected 'private' content for your newsletter. Private content cannot be part of a newsletter."
-msgstr "Vous avez sélectionné un contenu 'privé' pour votre newsletter. Le contenu privé ne peut pas faire partie d'une newsletter."
-
-msgid "Warning secret content"
-msgstr "Avertissement contenu secret"
-
-msgid "Warning private content"
-msgstr "Attention contenu privé"
-
 msgid "Old domain"
 msgstr "Ancien domaine"
 
@@ -1940,6 +1937,14 @@ msgstr "Durée de l'état archivé jusqu'à la suppression automatique"
 
 msgid "E-Mail Address"
 msgstr "Adresse e-mail"
+
+msgid "Submission Window"
+msgstr "Fenêtre de soumission"
+
+#, python-format
+msgid "The date range overlaps with an existing submission window (${range})."
+msgstr ""
+"La période donnée chevauche une fenêtre de soumission existante (${range})."
 
 msgid "Short name to identify the text module"
 msgstr "Nom court pour identifier le module de texte"
@@ -2155,9 +2160,6 @@ msgstr "Page d'accueil"
 msgid "Save"
 msgstr "Sauver"
 
-msgid "Forms"
-msgstr "Formulaires"
-
 msgid "Edit"
 msgstr "Modifier"
 
@@ -2203,6 +2205,25 @@ msgstr "Formulaire externe"
 
 msgid "New external form"
 msgstr "Nouveau formulaire externe"
+
+msgid "Do you really want to delete this survey?"
+msgstr "Voulez-vous vraiment supprimer ce sondage ?"
+
+msgid "This cannot be undone. And all submissions will be deleted with it."
+msgstr ""
+"Cela ne peut être annulé. Et toutes les soumissions seront supprimées avec."
+
+msgid "Delete survey"
+msgstr "Supprimer le sondage"
+
+msgid "Results"
+msgstr "Résultats"
+
+msgid "Submission Windows"
+msgstr "Fenêtres de soumission"
+
+msgid "Survey"
+msgstr "Sondage"
 
 msgid "Person"
 msgstr "Personne"
@@ -2582,9 +2603,6 @@ msgstr "Come primo elemento del contenuto"
 
 msgid "As a full width header"
 msgstr "Come immagine di intestazione a tutta larghezza"
-
-msgid "Documents"
-msgstr "Documents"
 
 msgid "Show file links in sidebar"
 msgstr "Afficher les liens vers les fichiers dans la barre latérale"
@@ -3546,6 +3564,12 @@ msgstr "Fermer"
 msgid "Copy to clipboard"
 msgstr "Copier dans le presse-papiers"
 
+msgid "No submissions yet."
+msgstr "Aucune soumission pour l'instant."
+
+msgid "Number of participants"
+msgstr "Nombre de participants"
+
 msgid "Hello!"
 msgstr "Bonjour"
 
@@ -4027,6 +4051,29 @@ msgstr "Ticket a été archivé"
 msgid "Ticket recovered from archive."
 msgstr "Ticket récupéré dans les archives"
 
+msgid "Warning secret content"
+msgstr "Avertissement contenu secret"
+
+msgid ""
+"You selected 'secret' content for your newsletter. Secret content will not "
+"be visible unless you enable it in"
+msgstr ""
+"Vous avez sélectionné un contenu 'secret' pour votre newsletter. Le contenu "
+"secret ne sera pas visible à moins que vous ne l'activiez dans les"
+
+msgid "newsletter settings"
+msgstr "paramètres de la newsletter"
+
+msgid "Warning private content"
+msgstr "Attention contenu privé"
+
+msgid ""
+"You selected 'private' content for your newsletter. Private content cannot "
+"be part of a newsletter."
+msgstr ""
+"Vous avez sélectionné un contenu 'privé' pour votre newsletter. Le contenu "
+"privé ne peut pas faire partie d'une newsletter."
+
 msgid ""
 "The newsletter is disabled. You can only see this page because you are "
 "logged in."
@@ -4344,6 +4391,21 @@ msgstr ""
 
 msgid "Back to page"
 msgstr "Retour à la page"
+
+msgid "Fields"
+msgstr "Champs"
+
+msgid ""
+"Please review your answers and press \"Complete\" to complete the survey. If "
+"there's anything you'd like to change, click on \"Edit\" to return to the "
+"filled-out survey."
+msgstr ""
+"Veuillez vérifier vos réponses et appuyez sur \"Compléter\" pour terminer le "
+"sondage. Si vous souhaitez modifier quelque chose, cliquez sur \"Modifier\" "
+"pour revenir au sondage rempli."
+
+msgid "No surveys defined yet."
+msgstr "Aucun sondage n'est encore défini."
 
 msgid "No activities yet."
 msgstr "Aucune activité pour le moment."
@@ -5611,6 +5673,49 @@ msgstr "Chat"
 
 msgid "Topics"
 msgstr "Sujets"
+
+msgid "The survey timeframe has ended"
+msgstr "La période de l'enquête est terminée"
+
+#, python-format
+msgid "The survey timeframe opens on ${day}, ${date}"
+msgstr "La période d'enquête s'ouvre le ${day}, ${date}"
+
+#, python-format
+msgid "The survey timeframe closes on ${day}, ${date}"
+msgstr "La période d'enquête se termine le ${day}, ${date}"
+
+msgid "A survey with this name already exists"
+msgstr "Une enquête avec ce nom existe déjà"
+
+msgid "Added a new survey"
+msgstr "Ajout d'une nouvelle enquête"
+
+msgid "New Survey"
+msgstr "Nouvelle enquête"
+
+msgid "Exports the submissions of the survey."
+msgstr "Exporte les soumissions de l'enquête."
+
+msgid "New Submission Window"
+msgstr "Nouvelle fenêtre de soumission"
+
+msgid "Submissions windows limit survey submissions to a specific time-range."
+msgstr ""
+"Les fenêtres de soumission limitent les soumissions d'enquêtes à une période "
+"spécifique."
+
+msgid "Do you really want to delete this submission window?"
+msgstr "Voulez-vous vraiment supprimer cette fenêtre de soumission ?"
+
+msgid "Delete submission window"
+msgstr "Supprimer la fenêtre de soumission"
+
+msgid "Edit Submission Window"
+msgstr "Modifier la fenêtre de soumission"
+
+msgid "The submission window was deleted"
+msgstr "La fenêtre de soumission a été supprimée"
 
 msgid "Added a new text module"
 msgstr "Ajout d'un nouveau module de texte"
